# PorterOrg_Regression_problem

./: 1. Porter_NN_DataCleaning.ipynb  2. Porter_Modeling.ipynb  3. Prep_for_Deployment.ipynb  Debugging_with_DataScientist.md  PersonalNotes.md  Porter_NN.ipynb  README.md  ai_layer.py  main.py  pyproject.toml  requirements.txt  run.bat  streamlit_app.py
.virtual_documents/: Untitled.ipynb
MyNotes/: # Neural Network Notes.txt  PersonalNotes.md
app/: main.py  pipeline.py
model_development/: 1. Porter_NN_DataCleaning.ipynb  3. Prep_for_Deployment.ipynb
porter_model/: best_model.keras  best_model_v2.keras  category_encoding.pkl  feature_columns.pkl  global_mean.pkl  scaler.pkl  time_period_encoding.pkl  y_test.csv  y_test_raw.csv  y_train.csv  y_train_raw.csv  y_val.csv  y_val_raw.csv
