[project]
name = "porterorg-regression-problem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.83.0",
    "fastapi>=0.129.0",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.41.0",
]
